# Deterministic_Automaton_Visualizer

./: AutomatPage.qml  CMakeLists.txt  CMakeLists.txt.user.4a4c472  CanvasFunctions.js  Main.qml  README.md  SetWordPage.qml  backend.cpp  backend.h  main.cpp
application_.exe-ready_to_run-windows/: application_.exe-ready_to_run-windows.7z.003
